# pyMetricBenchmark

./: README.md  setup.cfg
src/: benchmarkGroup5.py  main.py
src/datei/: download.py
src/fatjar/: osinfos.py  subfatjar.py
src/matplot/: balkenplot.py  boxplot.py  liniendiagramm.py
src/pyMetricBenchmark/: benchmarkGroup5.py  main.py
src/pyMetricBenchmark/matplot/: balkenplot.py  boxplot.py  liniendiagramm.py
src/pyMetricBenchmark/txtfiles/: multifileguava
src/txtfiles/: globaljars  group5  multifilespring
