[metadata]
name = benchmarkGroup5
author = Sebastian Kurth
author-email = 1sebastian1@online.de
license =
long_description = file: README.md
url = https://

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas >= 1.4.0
    numpy >= 1.22
    matplotlib >= 3.5.0
    requests >= 2.27



package_dir =
    =src
python_requires = >=3.8


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybenchmarkGroup5 = main:entrypoint
pipx.run =
    benchmarkGroup5 = main:entrypoint