[metadata]
name = benchmarkGroup5
long_description = file: README.md
url = https://
version = 1.0.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas >= 1.4.0
    numpy >= 1.22
    matplotlib >= 3.5.0
    psutil >= 5.3.0
    py-cpuinfo >= 8.0.0
    scikit-learn >= 1.0.0



package_dir =
    =src
python_requires = >=3.8


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybenchmarkGroup5 = main:entrypoint
pipx.run =
    benchmarkGroup5 = main:entrypoint